[project]
name = "aws-vpc-module"
version = "0.1.0"
description = "AWS VPC Module"
authors = [
    {name = "Roman Mezentsev",email = "rsmezentsev@outlook.com"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
